--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: cursive;
   background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
 }
 button {
